--- a/docs/404.md
+++ b/docs/404.md
@@ -3,7 +3,8 @@ title: "404"
 excerpt: "Page Not Found"
 permalink: 404.html
 indexing: false
-sitemap: false
+sitemap: true
+feature_image: "/assets/static/img/default-offline-image.png"
 ---
 
 Sorry, but the page could not be found.
